Fix spacing for CookieControlsView enterprise note
We forgot to update the enterprise note to fill the width of the
view along with the card. This change fixes that to align with mocks

Before: https://screenshot.googleplex.com/4p2DPWRXYpi7hm9.png
After: https://screenshot.googleplex.com/3YsRHVdAhQPLYFY.png

Bug: 375352611,b/393159510
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6218002
Commit-Queue: Joshua Thomas <masnoble@chromium.org>

--- a/front_end/panels/security/cookieControlsView.css
+++ b/front_end/panels/security/cookieControlsView.css
@@ -98,9 +98,16 @@
 .enterprise {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   gap: var(--sys-size-9);
   padding: var(--sys-size-6) var(--sys-size-8) var(--sys-size-6) var(--sys-size-11);
   align-items: center;
+
+  > .anchor{
+    display: flex;
+    flex-direction: row;
+    gap: var(--sys-size-9);
+  }
 }
 
 input[type="checkbox"] {
